crates/deadline-cli/tests/cli/snapshots/cli__bundle__bundle_submit_with_attachments_uploads_files.snap
---
source: crates/deadline-cli/tests/cli/bundle.rs
info:
  program: deadline
  args:
    - bundle
    - submit
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpwqEbgL/case12
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:59734"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:59734"
    AWS_ENDPOINT_URL_S3: "http://localhost:59734"
    AWS_ENDPOINT_URL_STS: "http://localhost:59734"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpwqEbgL/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpwqEbgL
---
success: true
exit_code: 0
----- stdout -----
Submitting to Queue: Test Queue

Warning: 1 file(s) found outside of known asset paths:
  [TEMP_PATH]
Hashing Summary:
    Processed 1 file totaling 17 B.
    Skipped re-processing 0 files totaling 0 B.
    Total processing time of [TIME] seconds at [RATE]/s.
Upload Summary:
    Processed 1 file totaling 0 B.
    Skipped re-processing 0 files totaling 0 B.
    Total processing time of [TIME] seconds at [RATE]/s.
Waiting for Job to be created...
Submitted job bundle:
   [TEMP_PATH]
Job created successfully
job-0123456789abcdef0123456789abcdef

----- stderr -----
